# cmake_vs_filter

./: CMakeLists.txt
main/: main.cpp
math/: kalman.cpp
math/matrix/: quat.cpp
uav/: control.cpp  control.h
